# Changes log for App-Maisha
============================

0.15	current
	- added OAuth support to Identica access.
	- added better protection for failing commands.

0.14	11/09/2010
	- documentation fix for INI format example (thanks to Alan Haggai Alavi).
	- rewrite to Twitter.pm to use OAuth mechanism for logging in.
	- interface to plugins changed, now passes a config hash.
	- config hash now saves the home directory.
	- added META.json file and associated test.

0.13	20/08/2009
	- fixed requests with limits larger than 20.
	- suppressing 'command ok' messages.
	- refactored common code in to new functions
	- added user completion functionality.

0.12	27/02/2009
	- various documentation updates.
	- timelines are filtered through a pager (RR)
	- added completion for use command (RR)
	- fixed bug with configured message limits.
	- added user defined message formatting
	- added user defined terminal character width

	RR = Robert Rothenberg. Many thanks for the patches and ideas Rob.

0.11	18/02/2009
	- improved META.yml testing in 94metatest.t.
	- added plugin check for 'use' command.
	- fixed send_message and update so that single quotes are accepted, as
	  Term::Shell was stripping them out :(
	- added 92disttest.t and 95changedate.t tests to the suite.
	- added Text::Wrap at Rob Rothenberg's suggestion to more neatly wrap
	  the messages and replies listings.

0.10	17/02/2009
	- somethimes I'm just too eager. META.yml now updated too!

0.09	17/02/2009
	- added README to MANIFEST.
	- document changes.

0.08	17/02/2009
	- added about and version methods to the shell.
	- removed follow/unfollow from Identica plugin, as they are not 
	  supported.
	- more tests.

0.07	17/02/2009
	- various documentation updates.
	- more tests
	- provided more example configuration files.

0.06    16/02/2009
	- default configuration file name and location changed. Thanks to Rob
	  Rothenberg for the suggestion.
	- added dependencies used by maisha script.

0.05    16/02/2009