@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                   App-Maisha
-version:                0.14
+version:                0.15
 abstract:               A command line social micro-blog networking tool.
 author:
   - Barbie <barbie@cpan.org>
@@ -37,22 +37,22 @@ build_requires:
 provides:
   App::Maisha:
     file: lib/App/Maisha.pm
-    version: 0.14
+    version: 0.15
   App::Maisha::Shell:
     file: lib/App/Maisha/Shell.pm
-    version: 0.14
+    version: 0.15
   App::Maisha::Plugin::Base:
     file: lib/App/Maisha/Plugin/Base.pm
-    version: 0.14
+    version: 0.15
   App::Maisha::Plugin::Identica:
     file: lib/App/Maisha/Plugin/Identica.pm
-    version: 0.14
+    version: 0.15
   App::Maisha::Plugin::Test:
     file: lib/App/Maisha/Plugin/Test.pm
-    version: 0.14
+    version: 0.15
   App::Maisha::Plugin::Twitter:
     file: lib/App/Maisha/Plugin/Twitter.pm
-    version: 0.14
+    version: 0.15
 no_index:
   directory:
     - t
