@@ -4,8 +4,6 @@ tag: .
 
 [Identica]
 username: yourlogin
-password: yourpassword
 
 [Twitter]
 username: yourlogin
-password: yourpassword
