@@ -5,10 +5,8 @@
   </CONFIG>
   <Twitter>
     <username>yourlogin</username>
-    <password>yourpassword</password>
   </Twitter>
   <Identica>
     <username>yourlogin</username>
-    <password>yourpassword</password>
   </Identica>
 </xml>
