@@ -5,8 +5,6 @@ CONFIG:
 
 Twitter:
   username: yourlogin
-  password: yourpassword
 
 Identica:
   username: yourlogin
-  password: yourpassword
