@@ -3,7 +3,7 @@ package App::Maisha::Plugin::Test;
 use strict;
 use warnings;
 
-our $VERSION = '0.14';
+our $VERSION = '0.15';
 
 #----------------------------------------------------------------------------
 # Library Modules
